--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -1,9 +1,5 @@
+<%= render partial: "search" %>
+
 <h1>Enrollments</h1>
 
-<% if @enrollments.any? %>
-  <ul>
-    <% @enrollments.each do |enrollment| %>
-      <li><%= enrollment.subjId %></li>
-    <% end %>
-  </ul>
-<% end %>
+<%= render partial: "enrollments", locals: {enrollments: @enrollments} %>
