--- a/app/views/enrollments/_enrollments.html.erb
+++ b/app/views/enrollments/_enrollments.html.erb
@@ -2,13 +2,29 @@
   <table class="table table-striped table-condensed tablesorter">
     <thead>
       <tr>
+        <th><%= sort_link(@search, :status, 'Status') %></th>
+        <th><%= sort_link(@search, :projId, 'Project ID') %></th>
         <th><%= sort_link(@search, :subjId, 'Subject ID') %></th>
+        <th><%= sort_link(@search, :homeId, 'Home ID') %></th>
+        <th><%= sort_link(@search, :startDate, 'Start Date') %></th>
+        <th><%= sort_link(@search, :RAId, 'RA ID') %></th>
+        <th><%= sort_link(@search, :eligibility, 'Eligibility') %></th>
+        <th><%= sort_link(@search, :secondary, 'Secondary') %></th>
+        <th><%= sort_link(@search, :idx, 'Index') %></th>
       </tr>
     </thead>
     <tbody>
       <% enrollments.each do |enrollment|%>
         <tr>
+          <td><%= enrollment.status %></td>
+          <td><%= enrollment.projId %></td>
           <td><%= enrollment.subjId %></td>
+          <td><%= enrollment.homeId %></td>
+          <td><%= enrollment.startDate %></td>
+          <td><%= enrollment.RAId %></td>
+          <td><%= enrollment.eligibility %></td>
+          <td><%= enrollment.secondary %></td>
+          <td><%= enrollment.idx %></td>
         </tr>
       <% end %>
     </tbody>
