--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -2,17 +2,17 @@
 
 <%= form_for @enrollment do |f| %>
   <div class="form-group">
-    <%= f.label :status, "Status" %>
-    <%= f.collection_select(:enrollment, :enrollment_state_id, :to_s, :humanize) %>
+    <%= f.label :enrollment_state_id, "Status" %>
+    <%= f.collection_select(:enrollment_state_id, EnrollmentState.all, :id, :Name) %>
   </div>
 
   <div class="form-group">
-    <%= f.label :projId, "Project ID" %>
-    <%= f.collection_select(:projId, Enrollment::PROJECTS, :to_s, :humanize) %>
+    <%= f.label :project_id, "Project" %>
+    <%= f.collection_select(:project_id, Project.all, :id, :name) %>
   </div>
 
   <div class="form-group">
-    <%= f.label :subjId, "Subect ID" %>
+    <%= f.label :subjId, "Subject ID" %>
     <%= f.text_field :subjId %>
   </div>
 
