--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :eligibility, "eligibility" %>
-    <%= f.text_field :eligibility %>
+    <%= f.label :eligibility_state_id, "Eligibility" %>
+    <%= f.collection_select(:eligibility_state_id, EligibilityState.all, :id, :Title) %>
   </div>
 
   <div class="form-group">
