--- a/app/views/enrollments/new.html.erb
+++ b/app/views/enrollments/new.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="form-group">
+    <%= f.label :startDate, "Start Date" %>
+    <%= f.text_field :startDate %>
+  </div>
+
+  <div class="form-group">
     <%= f.label :homeId, "Home ID" %>
     <%= f.text_field :homeId %>
   </div>
