Populate enrollment show page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,7 @@
  @import "bootstrap-sprockets";
  @import "bootswatch/cerulean/variables";
  @import "bootstrap";
+
+ .well {
+   background-color: #D4D9F0;
+ }
