--- a/app/views/enrollments/_search.html.erb
+++ b/app/views/enrollments/_search.html.erb
@@ -1,11 +1,13 @@
-<h4>Search</h4>
+<div class="well">
+  <h4>Search</h4>
 
-<%= search_form_for @search, :html => {:id => "search-form-enrollments", :class => "form-horizontal"} do |f| %>
-  <%= f.condition_fields do |c| %>
-    <%= render "condition_fields", f: c %>
+  <%= search_form_for @search, :html => {:id => "search-form-enrollments", :class => "form-horizontal"} do |f| %>
+    <%= f.condition_fields do |c| %>
+      <%= render "condition_fields", f: c %>
+    <% end %>
+
+    <%= link_to_add_fields "Add Filter", f, :condition %>
+
+    <%= f.submit "Search", class: 'btn btn-success btn-sm', id: 'search-btn' %>
   <% end %>
-
-  <%= link_to_add_fields "Add Filter", f, :condition %>
-
-  <%= f.submit "Search", class: 'btn btn-success btn-sm', id: 'search-btn' %>
-<% end %>
+</div>
