--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -29,4 +29,6 @@
 
   <%= link_to "Edit", edit_enrollment_path, class: "btn btn-primary" %>
 
+  <%= link_to "Delete", enrollment_path(@enrollment), data: { confirm: "Are you sure you want to permanently delete this enrollment?", method: "delete" }, class: "btn btn-danger" %>
+  <br><br>
   <%= link_to  "Back to Index", enrollments_path, class: "btn btn-primary" %>
