--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -13,8 +13,6 @@
     <div class="row show-grid well">
       <h4><small><%= label_tag "Home ID" %></small><br><%= @enrollment.homeId %></h4>
     </div>
-  </div>
-  <div class="col-md-6">
     <div class="row show-grid well">
       <h4><small><%= label_tag "Start Date" %></small><br><%= @enrollment.startDate %></h4>
     </div>
@@ -23,6 +21,30 @@
     </div>
     <div class="row show-grid well">
       <h4><small><%= label_tag "Eligibility Sub State" %></small><br><%= @enrollment.eligibility_sub_state.Title %></h4>
+    </div>
+  </div>
+
+  <div class="col-md-6">
+    <div class="table-responsive">
+      <h3>Enrollment Status Updates:</h3>
+      <table class="table table-striped table-condensed tablesorter">
+        <thead>
+          <tr>
+            <th><%= "Date:" %></th>
+            <th><%= "Changed from:" %></th>
+            <th><%= "To:" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @enrollment.audits.each do |change|%>
+            <tr>
+              <td><%= change.updated_at %></td>
+              <td><%= EnrollmentState.find(change.audited_changes.first[1][0]).Name %></td>
+              <td><%= EnrollmentState.find(change.audited_changes.first[1][1]).Name %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
