--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -1,56 +1,51 @@
 <div class="row">
   <h1>Enrollment Information:</h1>
   <div class="col-md-6">
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Subject ID" %></small><br><%= @enrollment.subjId %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Status" %></small><br><%= @enrollment.enrollment_state.Name %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Project" %></small><br><%= @enrollment.project.name %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Home ID" %></small><br><%= @enrollment.homeId %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Start Date" %></small><br><%= @enrollment.startDate %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Eligibility State" %></small><br><%= @enrollment.eligibility_state.Title %></h4>
-    </div>
-    <div class="row show-grid well">
-      <h4><small><%= label_tag "Eligibility Sub State" %></small><br><%= @enrollment.eligibility_sub_state.Title %></h4>
-    </div>
+    <h4 class="condensed">Subject ID</h4><%= @enrollment.subjId %>
+    <h4 class="condensed">Status</h4><%= @enrollment.enrollment_state.Name %>
+    <h4 class="condensed">Project</h4><%= @enrollment.project.name %>
+    <h4 class="condensed">Home ID</h4><%= @enrollment.homeId %>
+    <h4 class="condensed">Start Date</h4><%= @enrollment.startDate %>
+    <h4 class="condensed">Eligibility State</h4><%= @enrollment.eligibility_state.Title %>
+    <h4 class="condensed">Secondary</h4><%= @enrollment.eligibility_sub_state.Title %>
   </div>
 
   <div class="col-md-6">
     <div class="table-responsive">
-      <h3>Enrollment Status Updates:</h3>
+      <h4 class="condensed">Status History:</h4>
       <table class="table table-striped table-condensed tablesorter">
         <thead>
           <tr>
             <th><%= "Date:" %></th>
-            <th><%= "Changed from:" %></th>
-            <th><%= "To:" %></th>
+            <th><%= "Action:" %></th>
+            <th><%= "Status:" %></th>
           </tr>
         </thead>
         <tbody>
-          <% @enrollment.audits.each do |change|%>
-            <tr>
-              <td><%= change.updated_at %></td>
-              <td><%= EnrollmentState.find(change.audited_changes.first[1][0]).Name %></td>
-              <td><%= EnrollmentState.find(change.audited_changes.first[1][1]).Name %></td>
-            </tr>
+          <!-- Initial table row with 'created at' information -->
+          <tr>
+            <td><%= @enrollment.startDate %></td>
+            <td>Created</td>
+            <td><%= @enrollment.get_initial_status %></td>
+          </tr>
+
+          <!-- All updates to enrollment status -->
+          <% if @enrollment.get_audits.any? %>
+            <% @enrollment.get_audits.each do |audit|%>
+              <tr>
+                <td><%= audit.updated_at %></td>
+                <td>Updated</td>
+                <td><%= EnrollmentState.find(audit.audited_changes.first[1][1]).Name %></td>
+              </tr>
+            <% end %>
           <% end %>
         </tbody>
       </table>
     </div>
   </div>
 </div>
-
-  <%= link_to "Edit", edit_enrollment_path, class: "btn btn-primary" %>
-
+<br><br>
+  <%= link_to "Edit", edit_enrollment_path, class: "btn btn-warning" %>
   <%= link_to "Delete", enrollment_path(@enrollment), data: { confirm: "Are you sure you want to permanently delete this enrollment?", method: "delete" }, class: "btn btn-danger" %>
   <br><br>
   <%= link_to  "Back to Index", enrollments_path, class: "btn btn-primary" %>
