--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render :partial => "shared/navbar" %>
   <div class="container">
     <%= render :partial => "shared/alerts" %>
     <%= yield %>
