Add scopes and navbar links for active and screening enrollments.

--- a/app/views/enrollments/_enrollments.html.erb
+++ b/app/views/enrollments/_enrollments.html.erb
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-  <table class="table table-striped table-condensed tablesorter">
+  <table id="<%= tab %>-data" class="table table-striped table-condensed tablesorter">
     <thead>
       <tr>
         <th><%= sort_link(@search, :id, 'Index') %></th>
