--- a/app/views/enrollments/index.html.erb
+++ b/app/views/enrollments/index.html.erb
@@ -6,4 +6,4 @@
 
 <h1>Enrollments</h1>
 
-<%= render partial: "enrollments", locals: {enrollments: @enrollments} %>
+<%= render partial: "enrollments", locals: {enrollments: @enrollments, tab: "enrollments"} %>
