--- a/app/views/enrollment_imports/new.html.erb
+++ b/app/views/enrollment_imports/new.html.erb
@@ -1,7 +1,14 @@
 <div class="row">
-  <div class="col-md-6">
-    <h4>Import New Enrollments</h4>
+  <h4>Import New Enrollments</h4>
+  <ul>
+    <li>If an <strong>Index</strong> is supplied, the corresponding existing record will be updated.</li>
+    <li>If an <strong>Index</strong> is not supplied, a new record will be created.</li>
+  </ul>
+  <%= render partial: "import_form", locals: {import: @enrollment_import} %>
+</div>
 
-    <%= render partial: "import_form", locals: {import: @enrollment_import} %>
-  </div>
+<div class="row">
+  <% if @enrollment_import.errors.any? %>
+    <%= render partial: "import_errors" %>
+  <% end %>
 </div>
