Add import success page with update information.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -32,3 +32,17 @@
   margin-top: 20px;
   margin-bottom: 1px;
 }
+
+.green {
+  background-color: #dff0d8;
+}
+
+.updated {
+  color: #468847;
+  font-weight: bold;
+}
+
+.previously {
+  background-color: #C9C7C7;
+  border-bottom: 3px solid black;
+}
